Handle items without a known collection as an error, not an assert.

This seems to happen when deleting a collection (happened to me and
to Martin Koller in bug 303888), sometimes.

Reviewed by Kevin Krammer

BUG: 303888